--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="hotel, boston, hotel, new england hotel">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Hotel Website | About</title>
+  <title>Hotel Website | Contact</title>
 </head>
 
 <body>
