--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston">
   <meta name="keywords" content="hotel, boston, hotel, new england hotel">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <title>Hotel Website | About</title>
 </head>
 
