--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston">
   <meta name="keywords" content="hotel, boston, hotel, new england hotel">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <title>Hotel Website | Contact</title>
 </head>
 
