--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston">
   <meta name="keywords" content="hotel, boston, hotel, new england hotel">
   <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" media="screen and (max-width: 786px)" href="CSS/mobile.css">
   <title>Hotel Website | About</title>
 </head>
 
@@ -26,7 +27,7 @@
  <section id="about-info" class="bg-light py-3">
   <div class="container">
     <div class="info-left">
-      <h1> <span class="text-primary">About</span> Hotel BT</h1>
+      <h1 class="l-heading"> <span class="text-primary">About</span> Hotel BT</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis, excepturi modi? Quod quas dolores vel accusamus laborum facere blanditiis quis amet optio asperiores numquam explicabo a aliquam earum, fugiat tenetur?</p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo officia esse eius expedita. Fugit omnis voluptatum quam assumenda aliquam dignissimos et laborum error, quos vitae!</p>
     </div>
