--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="hotel, boston, hotel, new england hotel">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" media="screen and (max-width: 786px)" href="CSS/mobile.css">
   <title>Hotel Website | Contact</title>
 </head>
 
